--- a/MyApp/Views/Account/SignUp.cshtml
+++ b/MyApp/Views/Account/SignUp.cshtml
@@ -9,7 +9,7 @@
     <div class="container border" style="padding:20px">
         <form asp-action="SignUp" method="post">
 
-            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+            <div class="text-danger" asp-validation-summary="All"></div>
             <div class="form-group row">
                 <div class="col-2">
                     <label asp-for="UserName"></label>
