--- a/MyApp/Views/Shared/_Layout.cshtml
+++ b/MyApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         </li>
                     </ul>
                 </div>
+                <partial name ="_SignInPartial"/>
             </div>
         </nav>
     </header>
